// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render correctly clickable card 1`] = `
.c0 {
  display: flex;
  align-items: center;
  border-radius: 0.5rem;
  padding: 1rem;
  flex-direction: column;
  transition: transform 0.45s;
}

.c0:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

.c1 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

.c4 {
  text-align: left;
  color: #EEF1EF;
  font-size: 2vh;
  align-self: flex-start;
  margin: 0;
  padding: 0.3rem 0;
}

.c2 {
  border-radius: 0.5rem;
  height: 20vh;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.9rem 0;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <img
        alt="awsome description"
        class="c2"
        src="some-awsome.jpg"
      />
      <div
        class="c3"
      >
        <h2
          class="c4"
        >
          Awsome image
        </h2>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Card /> should render correctly unclickable card 1`] = `
.c0 {
  display: flex;
  align-items: center;
  border-radius: 0.5rem;
  padding: 1rem;
  flex-direction: column;
}

.c3 {
  text-align: left;
  color: #EEF1EF;
  font-size: 2vh;
  align-self: flex-start;
  margin: 0;
  padding: 0.3rem 0;
}

.c1 {
  border-radius: 0.5rem;
  height: 20vh;
}

.c2 {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.9rem 0;
}

<div>
  <div
    class="c0"
  >
    <img
      alt="awsome description"
      class="c1"
      src="some-awsome.jpg"
    />
    <div
      class="c2"
    >
      <h2
        class="c3"
      >
        Awsome image
      </h2>
    </div>
  </div>
</div>
`;
